<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/select_planet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/select_planet"
        android:textSize="20sp"
        />

    <Spinner
        android:id="@+id/planets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_planet"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/times"
        android:spinnerMode="dropdown"
        android:entries="@array/planets_array"
        />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/planets"
        android:text="@string/select_age"
        android:textSize="20sp"
        />

    <Spinner
        android:id="@id/times"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/age"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dropdown"/>

    <Button
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/done"/>

</RelativeLayout>